--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.1
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.1
+django-debug-toolbar==3.6.0
 django-filter==22.1
 djangorestframework==3.13.1
 drf-yasg==1.21.3
